2008-01-08  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/cache.py: Document arguments to launchApplication().

2008-01-07  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Add select() to the PageTab class; add
	  assertSelected() to the PageTab and TableCell classes.

2007-12-07  Brad Taylor  <brad@getcoded.net>
	
	* strongwind/accessibles.py: Promote _clickPushButton in Dialog to
	  make the API more consistent with Alert.

2007-12-07  Brad Taylor  <brad@getcoded.net>
	
	* strongwind/accessibles.py: Add cancel() to the Alert class.  I don't
	  know why this wasn't in there to start with...  Also, promote
	  _clickPushButton to being "public", as the HIG suggests that dialogs
	  use an action word instead of just Ok for affirmative alert buttons.

2007-10-29  Jonathan Tai  <jon@tgpsolutions.com>

	* MAINTAINERS:
	add back Brad and add Cody

2007-10-25  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py:
	(Dialog.assertClosed):
	(Alert.assertClosed):
	handle CORBA.COMM_FAILURE like Frame's assertClosed() does

2007-10-24  Brad Taylor  <brad@getcoded.net>

	* resources/procedures.xsl: Make the Strongwind logo a link to
	  Strongwind's project page.

2007-10-24  Brad Taylor  <brad@getcoded.net>
	
	* AUTHORS:
	* resources/procedures.xsl:
	* resources/strongwind.png:
	* resources/strongwind.svg: Add Strongwind's logo, drawn by Andreas
	  Nilsson <andreas@andreasn.se>.

2007-10-24  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/__init__.py:
	import procedurelogger as procedurelogger, not as procedures

	* strongwind/procedurelogger.py:
	* examples/gcalctool/calculatorframe.py:
	updates to reflect procedurelogger => procedures change

	* strongwind/watchdog.py:
	add documentation from the tutorial I'm writing

2007-10-23  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py:
	fix a LookupError that can occur when test scripts exit

	* examples/gcalctool-bug-488226.py:
	add a test for GNOME bugzilla bug #488226
