@@ -1,3 +1,7 @@
+2008-06-12  Brad Taylor  <brad@getcoded.net>
+	
+	* strongwind/accessibles.py: Implement grabFocus for Dialog and Frame.
+
 2008-01-08  Jonathan Tai  <jon@tgpsolutions.com>
 
 	* strongwind/cache.py: Document arguments to launchApplication().
